# medical-whisper-app

./: .env.example  .gitignore  Chart_Generation.ipynb  README.md  Step2_participant_classification.ipynb  Whisper_Structured_Output.txt  main.py  participant_classification.ipynb  pyproject.toml  whisper_pipeline.ipynb  whisper_pipeline_Origish.ipynb
notebooks/: Step1_whisper_pipeline.ipynb  Step3_Chart_Generation.ipynb
soap_note_outputs/: classified_segments_soap_note.json  classified_segments_soap_note.txt  classified_segments_soap_note_raw_ollama_response.json
src/whisper_app/: __main__.py  classify.py  cli.py  io_utils.py  notes.py  paths.py  transcribe.py
transcription_outputs/: classified_segments.csv  classified_segments.json  doctor_patient_example2_segments.json  doctor_patient_example2_transcript.txt  doctor_patient_example_segments.json  doctor_patient_example_transcript.txt
